<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia10horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia15horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia70horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.70" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia05vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia95vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia15vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia85vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tituloDialogoEliminar"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guia10horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guia85vertical"
                app:layout_constraintStart_toStartOf="@+id/guia15vertical"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textoPreguntaEliminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/texto_eliminar_persona"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guia85vertical"
                app:layout_constraintStart_toStartOf="@+id/guia15vertical"
                app:layout_constraintTop_toTopOf="@+id/guia70horizontal"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tituloCuentaCobrar"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView1"
                app:layout_constraintEnd_toStartOf="@+id/guia95vertical"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/guia05vertical"
                app:layout_constraintTop_toTopOf="@+id/guia15horizontal"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rect"
                android:padding="4dp"
                app:layout_constraintBottom_toTopOf="@+id/guia70horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guia95vertical"
                app:layout_constraintStart_toStartOf="@+id/guia05vertical"
                app:layout_constraintTop_toBottomOf="@id/textView25">

                <TableLayout
                    android:id="@+id/tablaCuentaCobrarAsociado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/md_theme_inverseSurface"
                    android:paddingBottom="20dp"
                    tools:ignore="VisualLintBounds">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/md_theme_inverseOnSurface">

                        <TextView
                            android:id="@+id/txtView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_codigo" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_deudor" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_valor" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_descripcion" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_fecha_prestamo" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_cuota" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tituloCuentaPagar"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
                app:layout_constraintEnd_toStartOf="@+id/guia95vertical"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/guia05vertical"
                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView1"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintVertical_chainStyle="packed" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rect"
                android:padding="4dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/guia70horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guia95vertical"
                app:layout_constraintStart_toStartOf="@+id/guia05vertical"
                app:layout_constraintTop_toBottomOf="@id/textView26">

                <TableLayout
                    android:id="@+id/tablaCuentaPagarAsociado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/md_theme_inverseSurface"
                    android:paddingBottom="20dp"
                    tools:ignore="VisualLintBounds">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/md_theme_inverseOnSurface">

                        <TextView
                            android:id="@+id/txtView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_codigo" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_acreedor" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_valor" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_descripcion" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_fecha_prestamo" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/tabla_cuota" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/nombreObjetoEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/texto_nombre_placeholder"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guia85vertical"
                app:layout_constraintStart_toStartOf="@+id/guia15vertical"
                app:layout_constraintTop_toBottomOf="@+id/textoPreguntaEliminar" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guia85vertical"
                app:layout_constraintStart_toStartOf="@+id/guia15vertical"
                app:layout_constraintTop_toBottomOf="@id/nombreObjetoEliminar"
                app:layout_constraintVertical_bias="0.4">

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
                    android:elevation="10dp"
                    android:text="@string/btn_eliminar"
                    android:textColor="@color/md_theme_onError_mediumContrast" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_secondaryContainer"
                    android:elevation="10dp"
                    android:text="@string/btn_cancelar"
                    android:textColor="@color/md_theme_onSecondaryContainer" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>